          - added quick filter to config pages
          - general design fixes (awiddersheim)
          - Exfoliation theme fixes (awiddersheim)
          - fixed number format in performance data (awiddersheim)
          - config tool improvements for shinken (Mathieu Parent)
          - added new command "thruk -a selfcheck" to perform some self checks
          - Reports
            - add maximum sla threshold to hide detail pages
            - allow multiple pnp graphs in sla reports (lkco)
          - Bug Fixes
            - fixed displaying partially active attributes
            - fixed wait trigger not working all the time
            - fixed tab rotation in panorama view
            - fixed loosing filter on reports page

1.82-2   Fri Feb 21 17:20:55 CET 2014
          - redirect to host details page if no services found and no service filter was set
          - Bug Fixes
            - fixed missing graphs in reports
            - fixed js error in panorama url panel

1.82     Thu Feb 13 00:01:36 CET 2014
          - naemon adjustments
          - performance improvments on pages not using any backends (reports, bp, conf,...)
          - removed old reporting plugin
          - install ssi examples
          - add plugin_output and long_plugin_output filter (awiddersheim)
          - CLI
            - added -a ALL option to send commands to all backends
          - Logcache
            - added 'logcacheremoveunused' command to remove old no longer used tables
          - Panorama
            - make tabs reorderable
            - autohiding headers don't change panel size
            - fixed problem on initializing pie charts
            - fixed import problem not showing initial panels
          - Business Process
            - change service plugin output for first node
            - add livestatus result transport
            - added cli command "bpcommit" to save manually create BPs
            - fixed displaying/using wrong host template