@@ -1,0 +1,7 @@
+﻿[% icon = 'page_white_acrobat.png' %]
+[% IF    r.var.ctype == 'html2pdf'              %][% icon = 'page_white_acrobat.png' %]
+[% ELSIF r.var.ctype == 'application/x-msexcel' %][% icon = 'page_white_excel.png' %]
+[% ELSIF r.var.ctype == 'text/html'             %][% icon = 'page_world.png' %]
+[% ELSIF r.var.ctype == 'image/png'             %][% icon = 'page_white_picture.png' %]
+[% ELSIF r.var.ctype != ''                      %][% icon = 'page_white_text.png' %]
+[% END %]
