@@ -1,0 +1,66 @@
+﻿[% PROCESS _header.tt css="plugins/reports2/reports.css" js="plugins/reports2/reports.js" %]
+[% PROCESS _message.tt %]
+[% USE date %]
+
+<table border="0" width="100%" cellspacing="0" cellpadding="0">
+  <tr>
+    <td align="left" valign="top" width="33%">
+      [% PROCESS _infobox.tt %]
+    </td>
+    <td align="center" valign="top" width="33%">
+      <br><br>
+      <div align="center" class='dataTitle'>Send Report By Mail</div>
+    </td>
+    <td align="right" valign="bottom" width="33%">
+      [% PROCESS _help.tt topic = "reports" %]
+    </td>
+  </tr>
+</table>
+<br><br>
+
+<form action="reports2.cgi" method="POST">
+<input type="submit" name="sub" value="sub" style="display:none"><!-- make enter submit the form -->
+<input type="hidden" name="action" value="email">
+<input type="hidden" name="send" value="1">
+<input type="hidden" name="report" value="[% r.nr %]">
+<table border="1" class='data reports'>
+  <tr>
+    <th class='data' style="width:125px;"><a href='reports2.cgi'><img src='[% url_prefix %]themes/[% theme %]/images/arrow_left.png' border="0" alt='back' title='back' width="16" height="16" style="vertical-align: middle;"></a></th>
+    <th class='data'>E-Mail: [% r.name %]</th>
+  </tr>
+  <tr class="firstrow">
+    <td class="dataEven" align="center"><b>Subject</b></td>
+    <td class="dataOdd" align="left"><input type="text" name="subject" value="[% subject %]"></td>
+  </tr>
+  <tr>
+    <td class="dataEven" align="center" valign="top"><b>To</b></td>
+    <td class="dataOdd" align="left"><input type="text" name="to" value="[% r.to %]"></td>
+  </tr>
+  <tr>
+    <td class="dataEven" align="center" valign="top"><b>Cc</b></td>
+    <td class="dataOdd" align="left"><input type="text" name="cc" value="[% r.cc %]"></td>
+  </tr>
+  <tr>
+    <td class="dataEven" align="center" valign="top"><b>Description</b></td>
+    <td class="dataOdd" align="left"><textarea name="desc" wrap="hard" cols=74>[% r.desc %]</textarea></td>
+  </tr>
+  <tr>
+    <td class="dataEven" align="center" valign="top"><b>Attachments</b></td>
+    <td class="dataOdd" align="left">
+      [% PROCESS _reports_icon.tt r=r %]
+      <a href="reports2.cgi?report=[% r.nr %]&amp;refresh=0"><img src='[% url_prefix %]themes/[% theme %]/images/[% icon %]' border="0" alt='' title='' width=16 height=16 style="vertical-align: top;"> [% attach %] ([% n = reduce_number(size, 'B', 1000); sprintf("%.1f %s", n.0, n.1) %])</a>
+    </td>
+  </tr>
+  <tr>
+    <td class="dataEven" align="center" valign="top"></td>
+    <td class="dataOdd" align="center">
+      <button class="report_email_button report_button" style="width: 150px;">Send E-Mail</button>
+    </td>
+  </tr>
+</table>
+
+<script type="text/javascript">
+<!--
+  init_report_tool_buttons();
+-->
+</script>
